<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="web_client_id">110492187742627766509</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_github">Sign in with Github</string>
    
    <string name="facebook_app_id">675979727605735</string>
    <string name="fb_login_protocol_scheme">fb675979727605735</string>
    <string name="facebook_client_token">956fe520a77413bc0412e8726e445350</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="your_lunch">Your lunch</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="opened">Ouvert</string>
    <string name="closed">Fermé</string>
    <string name="chose_this_restaurant">Chose this restaurant</string>
    <string name="restaurant_image">restaurant image</string>
    <string name="website">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="call">CALL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_string">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="change_your_username_here">Change your username here !</string>
    <string name="change_your_email_here">Change your email here !</string>
    <string name="change_your_password_here">Change your password here !</string>
    <string name="new_username">New Username</string>
    <string name="new_email">New Email</string>
    <string name="ok">OK</string>
    <string name="new_password">New Password</string>
    <string name="error_in_new_username">Error in new username</string>
    <string name="error_in_new_email">Error in new email</string>
    <string name="error_in_new_password">Error in new password</string>
    <string name="changed_with_success">Changed with success</string>
    <string name="eating_at">mange à :</string>
    <string name="not_eating">n\'est pas entrain de manger</string>
</resources>