<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  
    >
    
    <ImageView
        android:id="@+id/login_act_background_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@drawable/test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@color/black"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        />
    
    <ImageView
        android:id="@+id/login_act_logo_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:elevation="12dp"
        android:src="@drawable/lunchbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <TextView
        android:id="@+id/login_act_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/convergence"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/baby_powder"
        android:textSize="76sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_act_logo_image"
        />
    
    <TextView
        android:id="@+id/login_act_app_catch_phrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/convergence"
        android:text="@string/find_a_nice_restaurant_and_invite_your_co_workers_for_lunch"
        android:textAlignment="center"
        android:textColor="@color/baby_powder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_act_app_name"
        />
    
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_act_facebook_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/facebook_color"
        android:elevation="12dp"
        android:fontFamily="@font/convergence"
        android:insetLeft="16dp"
        android:insetTop="0dp"
        android:insetRight="16dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in_with_facebook"
        android:textStyle="bold"
        app:chainUseRtl="true"
        app:cornerRadius="8dp"
        app:icon="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@id/login_act_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_act_app_catch_phrase"
        app:layout_constraintVertical_chainStyle="packed"
        />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_act_google_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/google_color"
        android:elevation="12dp"
        android:fontFamily="@font/convergence"
        android:insetLeft="16dp"
        android:insetTop="0dp"
        android:insetRight="16dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in_with_google"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:icon="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_act_facebook_button"
        />
    
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_act_github_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/github_color"
        android:clickable="false"
        android:elevation="12dp"
        android:fontFamily="@font/convergence"
        android:insetLeft="16dp"
        android:insetTop="0dp"
        android:insetRight="16dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in_with_github"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:icon="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_act_google_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>