<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baby_powder"
    android:fitsSystemWindows="true"
    tools:context=".restaurants.details.RestaurantDetailsActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/restaurant_details_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/restaurant_details_CollapsingBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"
            >

            <ImageView
                android:id="@+id/restaurant_details_ImageView_restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/restaurant_image"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/restaurant_details_ToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restaurant_details_FloatingActionButton_eat_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/chose_this_restaurant"
        android:src="@drawable/selection"
        app:backgroundTint="@color/baby_powder"
        app:layout_anchor="@id/restaurant_details_AppBarLayout"
        app:layout_anchorGravity="bottom|end"
        app:rippleColor="@color/dark_purple"
        app:tint="@color/dark_purple"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/restaurant_details_CardView_restaurant_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_purple"
            app:cardCornerRadius="0dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/restaurant_details_TextView_restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/convergence"
                    android:textColor="@color/baby_powder"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toStartOf="@id/restaurant_details_RatingBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Le Zinc"
                    />

                <RatingBar
                    android:id="@+id/restaurant_details_RatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:stepSize="0.1"
                    android:theme="@style/RatingBarDark"
                    app:layout_constraintBottom_toTopOf="@id/restaurant_details_TextView_restaurant_type"
                    app:layout_constraintStart_toEndOf="@id/restaurant_details_TextView_restaurant_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.72"
                    tools:rating="4.5"
                    />

                <TextView
                    android:id="@+id/restaurant_details_TextView_restaurant_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/convergence"
                    android:textColor="@color/baby_powder"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/restaurant_details_TextView_restaurant_name"
                    tools:text="French restaurant - 12 rue du Faubourg Poissonière"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/restaurant_details_ImageView_phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_local_phone_24"
            app:layout_constraintBottom_toTopOf="@id/restaurant_details_TextView_phone"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_phone"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_phone"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_View_phone"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/dark_purple"
            />

        <TextView
            android:id="@+id/restaurant_details_TextView_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/convergence"
            android:text="@string/call"
            android:textAlignment="center"
            android:textColor="@color/dark_purple"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_View_phone"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_phone"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_phone"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_ImageView_phone"
            />

        <View
            android:id="@+id/restaurant_details_View_phone"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/restaurant_details_View_star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_CardView_restaurant_details"
            />

        <ImageView
            android:id="@+id/restaurant_details_ImageView_star"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_star_24"
            app:layout_constraintBottom_toTopOf="@id/restaurant_details_TextView_star"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_star"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_star"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_View_star"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/dark_purple"
            />

        <TextView
            android:id="@+id/restaurant_details_TextView_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/convergence"
            android:text="@string/like"
            android:textAlignment="center"
            android:textColor="@color/dark_purple"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_View_star"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_star"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_star"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_ImageView_star"
            />

        <View
            android:id="@+id/restaurant_details_View_star"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toStartOf="@id/restaurant_details_View_website"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_View_phone"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_CardView_restaurant_details"
            />

        <ImageView
            android:id="@+id/restaurant_details_ImageView_website"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/world"
            app:layout_constraintBottom_toTopOf="@id/restaurant_details_TextView_website"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_website"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_website"
            app:layout_constraintTop_toTopOf="@id/restaurant_details_View_website"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/dark_purple"
            />

        <TextView
            android:id="@+id/restaurant_details_TextView_website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/convergence"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColor="@color/dark_purple"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_ImageView_website"
            app:layout_constraintEnd_toEndOf="@id/restaurant_details_View_website"
            app:layout_constraintStart_toStartOf="@id/restaurant_details_View_website"
            app:layout_constraintBottom_toBottomOf="@id/restaurant_details_View_website"
            />

        <View
            android:id="@+id/restaurant_details_View_website"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restaurant_details_View_star"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_CardView_restaurant_details"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/restaurant_details_Barrier_calls_to_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="restaurant_details_View_phone,restaurant_details_View_star,restaurant_details_View_website"
            app:barrierDirection="bottom"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/restaurant_details_Divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:dividerColor="@color/dark_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_Barrier_calls_to_action"
            />

        <com.despaircorp.molecules.coworker_list.CoworkersList
            android:id="@+id/restaurant_details_CoworkerList_coworker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_details_Divider"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>